Fix: Text alignment

--- a/src/main/resources/org/groupe6/slitherlink/SlitherLink/style.css
+++ b/src/main/resources/org/groupe6/slitherlink/SlitherLink/style.css
@@ -65,7 +65,7 @@
     -fx-border-radius: 0px;
     -fx-padding: 0px;
     -fx-cursor: hand;
-    -fx-pref-width: 200px;
+    -fx-pref-width: 225px;
     -fx-pref-height: 55px;
 }
 
